<resources>
    <string name="app_name">Primary</string>
    <string name="points">Total points</string>
    <string name="resume_game">Resume Game</string>
    <string name="remaining">Remaining</string>
    <string name="clear_progress">Clear Progress</string>
    <string name="total_correct">Total correct</string>
    <string name="level_grade">Level %</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="correct">Correct!</string>
    <string name="score_overview">Level: %1$d. %2$d / %3$d correct. Score: %4$d.</string>
    <string name="levels_done">You\'ve completed all the levels in this subject!</string>
    <string name="level_complete">Level %d complete!</string>
    <string name="next_level">Next level</string>
    <string name="repeat_level">Repeat this level</string>
    <string name="try_again">Try again!</string>
    <string name="level">"Level %d"</string>
    <string name="max">"Max %s"</string>
    <string name="defaultUserName">Default</string>
    <string name="add_user">Add User</string>
    <string name="choose_user">1. Choose user</string>
    <string name="choose_subject">2. Choose Subject:</string>
    <string name="go">Go!</string>
    <string name="start_lab">3. Start</string>
    <string name="avatar">Avatar:</string>
    <string name="name_short">Name too short</string>
    <string name="name_long">Name must be less than 10 characters long</string>
    <string name="name_in_use">Name already in use!</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="delete_user">Delete User</string>
    <string name="update_avatar">Update</string>
    <string name="today_points">Today\'s points</string>
    <string name="superfast">SuperFast!</string>
    <string name="fast">Fast!</string>
    <string name="quick">Quick!</string>

    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="times">Times</string>
    <string name="divide">Divide</string>
    <string name="setcompleted">Done</string>
    <string name="add_item">Add Item</string>
    <string name="sure_delete_user">Are you sure you want to delete the user?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="csv_time">Time</string>
    <string name="csv_level">Level</string>
    <string name="csv_problem">Problem</string>
    <string name="csv_answer">Answer</string>
    <string name="csv_useranswer">User answer</string>
    <string name="csv_correct">Correct</string>
    <string name="csv_tspent">Time spent</string>
    <string name="csv_run_percent">Running Percent</string>
    <string name="csv_points">Points</string>
    <string name="sure_clear_progress">Are you sure you want to clear your progress?</string>
    <string name="clear">Clear</string>
    <string name="write_perms_granted">Will record activity in csv file.</string>
    <string name="write_perms_denied">Will not record activity in csv file.</string>
    <string name="about_primary">
        <![CDATA[
        <p>Primary is opensource software. See the full license and sourcecode
            <a href="https://github.com/quaap/Primary">here</a>.</p>

            <p>Report any issues, feedback, or suggestions <a href="https://github.com/quaap/Primary/issues">here</a>.</p>


            <p>This program was written by <a href=\'http://quaap.com/D/programming-index?from=audiometer\'>Tom Kliethermes</a></p>

            ]]>
    </string>
    <string name="about">About</string>
    <string name="all_scores">All Scores</string>



    <!-- Subjects and menus below -->

    <!-- The subject code. Should be 4-6 chars at most-->
    <string-array name="subjects">
        <item>M1</item>
        <item>M2</item>
        <item>M3</item>
        <item>M4</item>
        <item>M5</item>
        <item>Sp1</item>
        <item>Sp2</item>
        <item>Sp3</item>
    </string-array>

    <!-- The subject name. Should be less than 12 chars-->
    <string-array name="subjectsName">
        <item>Math +-25</item>
        <item>Math ×÷12</item>
        <item>-Math +-3</item>
        <item>-Math ×÷12</item>
        <item>Lotta math</item>
        <item>Spelling 1-4</item>
        <item>Spelling 5-7</item>
        <item>Spelling 8+</item>
    </string-array>

    <!-- The subject description. -->
    <string-array name="subjectDescs">
        <item>Plus and Minus. Numbers up to 25.</item>
        <item>Times and Divide. Numbers up to 12.</item>
        <item>Plus and Minus. Numbers -25 to 25.</item>
        <item>Times and Divide. Numbers -12 to 12.</item>
        <item>Everything!</item>
        <item>Spelling words 1 to 4 letters long</item>
        <item>Spelling words 5 to 7 letters long</item>
        <item>Spelling words 8+ letters long</item>
    </string-array>

    <string-array name="subjectsActivity">
        <item>com.quaap.primary.math.BasicMathMenuActivity</item>
        <item>com.quaap.primary.math.BasicMathMenuActivity</item>
        <item>com.quaap.primary.math.BasicMathMenuActivity</item>
        <item>com.quaap.primary.math.BasicMathMenuActivity</item>
        <item>com.quaap.primary.math.BasicMathMenuActivity</item>
        <item>com.quaap.primary.spelling.Spelling1MenuActivity</item>
        <item>com.quaap.primary.spelling.Spelling1MenuActivity</item>
        <item>com.quaap.primary.spelling.Spelling1MenuActivity</item>
    </string-array>

    <string-array name="subjectsLevelset">
        <item>Math1Levels</item>
        <item>Math2Levels</item>
        <item>Math3Levels</item>
        <item>Math4Levels</item>
        <item>Math5Levels</item>
        <item>Spelling1Levels</item>
        <item>Spelling2Levels</item>
        <item>Spelling3Levels</item>
    </string-array>


</resources>
