<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:background="#eeeeff"
        android:paddingStart="4dp"
        android:paddingEnd="2dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp">

        <TextView
            android:text="@string/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tscore"
            android:textSize="24sp"
            android:textColor="@android:color/holo_blue_bright"
            android:minEms="3"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bonuses"
            android:textColor="@android:color/holo_green_dark" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:background="#eeeeff"
        android:paddingStart="4dp"
        android:paddingEnd="2dp"
        android:id="@+id/todays_area"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today_points"
            android:textSize="14sp" />

        <TextView
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/todayscore"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:minEms="3"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:background="#eeeeff"
        android:paddingStart="4dp"
        android:paddingEnd="2dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp">

        <TextView
            android:text="@string/total_correct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:maxLines="2" />

        <TextView
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/total_ratio"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            tools:ignore="HardcodedText" />


    </LinearLayout>



</merge>