<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:layout_width="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="400dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="#eeeeee"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="48dp"
        android:layout_height="160dp"
        tools:ignore="InefficientWeight,UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level_complete_text"
            android:textSize="24sp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/levels_done"
            android:textSize="18sp"
            android:id="@+id/no_more_levels_txt"
            android:visibility="gone" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:id="@+id/repeatlevel_button"
                android:clickable="true"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_height="wrap_content"
                    app:srcCompat="@raw/repeat_level"
                    android:contentDescription="@string/repeat_level"
                    android:layout_width="wrap_content" />

                <TextView
                    android:text="@string/repeat_level"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="match_parent"
                android:id="@+id/nextlevel_button"
                android:clickable="true"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_height="wrap_content"
                    app:srcCompat="@raw/next_level"
                    android:contentDescription="@string/next_level"
                    android:layout_width="wrap_content" />

                <TextView
                    android:text="@string/next_level"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>